--- a/web-api/Properties/launchSettings.json
+++ b/web-api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "web_api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7096;http://localhost:5096",
       "environmentVariables": {
