--- a/minimal-api/minimal-api.csproj
+++ b/minimal-api/minimal-api.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\application\application.csproj" />
+    <ProjectReference Include="..\application\Application.csproj" />
   </ItemGroup>
 
 </Project>
