--- a/web-api/appsettings.json
+++ b/web-api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyChannel": "server=(localdb)\\MSSQLLocalDB;Database=MyChannelDbContext;Trusted_Connection=True"
+  },
   "AllowedHosts": "*"
 }
