Add account module and add auth for other modules.

--- a/web-api/appsettings.json
+++ b/web-api/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "http://massintention.com/"
+  },
   "ConnectionStrings": {
     "MyChannel": "server=(localdb)\\MSSQLLocalDB;Database=MyChannelDbContext;Trusted_Connection=True"
   },
