Add Video module.

--- a/web-api/web-api.csproj
+++ b/web-api/web-api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
