Add minimal api and fix error web api.

--- a/minimal-api/appsettings.json
+++ b/minimal-api/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "AllowedOrigins": "http://localhost:4200",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "https://MyChannel.com"
+  },
+  "ConnectionStrings": {
+    "MyChannel": "server=(localdb)\\MSSQLLocalDB;Database=MyChannelDbMinimalApiContext;Trusted_Connection=True"
   },
   "AllowedHosts": "*"
 }
