--- a/web-api/appsettings.json
+++ b/web-api/appsettings.json
@@ -9,10 +9,10 @@
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 15,
-    "JwtIssuer": "http://massintention.com/"
+    "JwtIssuer": "https://MyChannel.com"
   },
   "ConnectionStrings": {
-    "MyChannel": "server=(localdb)\\MSSQLLocalDB;Database=MyChannelDbContext;Trusted_Connection=True"
+    "MyChannel": "server=(localdb)\\MSSQLLocalDB;Database=MyChannelDbWebApiContext;Trusted_Connection=True"
   },
   "AllowedHosts": "*"
 }
