--- a/minimal-api/Properties/launchSettings.json
+++ b/minimal-api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7015;http://localhost:5015",
+      "applicationUrl": "https://localhost:7096",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
