--- a/minimal-api/minimal-api.csproj
+++ b/minimal-api/minimal-api.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
